Content Collections: Images loading, blogs loading, and MDX/JS working

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,7 +6,7 @@ import { getCollection } from 'astro:content';
 import PostList from '../components/PostList.astro';
 
 const posts = await getCollection("posts");
-console.log(posts)
+console.log("1 blog.astro")
 ---
 
 <Layout title="Blog | Rhythm Nation Blog">
