--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -3,10 +3,11 @@ import {type CollectionEntry, getEntryBySlug} from "astro:content"
 import {Image} from "astro:assets"
 
 type Props = {
-    post: CollectionEntry<"posts">
+    post: CollectionEntry<'posts'>
 }
 
 const {post} = Astro.props
+console.log("3 post.astro")
 ---
 
 <!-- width={600}
@@ -16,20 +17,25 @@ height={600 / 1.5} -->
 <article>
     <a href={`/blog/${post.slug}`}>
         <Image
-            src={post.data.image}
-            width={1024}
-            height={1024 / 1.5}
+            width={600}
+            height={600 / 1.5}
+            src={post.data.image} 
             alt={post.data.title}
             class="rounded-2xl shadow-xl mb-4 aspect-thumbnail object-cover"
             format="webp"
         />
     </a>
+
     <a
         href={`/blog/${post.slug}`}
         class="text-4xl text-zinc-900 mb-4 font-semibold inline-block"
     >
         {post.data.title}
     </a>
+
+    <p class="text-red-900 text-2xl mb-9 line-clamp-2">
+        {post.data.author}
+    </p>
 
     <p class="text-zinc-500 text-2xl mb-9 line-clamp-2">
         {post.body}
